# lakehouse-realtime-ingestion

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
flink-processor/: pom.xml
flink-processor/src/main/java/com/lakehouse/ingestion/: ClickStreamJob.java
src/: main.rs
terraform/: main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/.terraform/modules/: modules.json
terraform/modules/flink/: Dockerfile  main.tf  variables.tf
terraform/modules/kafka/: main.tf  outputs.tf
terraform/modules/minio/: main.tf  outputs.tf
terraform/modules/trino/: main.tf  variables.tf
terraform/modules/zookeeper/: main.tf  output.tf
trino/etc/catalog/: iceberg.properties
