[package]
name = "lakehouse-realtime-ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }